# smart-assistant-rag

./: .gitignore  README.md  pyproject.toml  run_evaluation.py
.github/: PULL_REQUEST_TEMPLATE.md
notebooks/: evaluate_rag.ipynb  evaluate_retrieval.ipynb
src/: utils.py
src/data/: evaluation_data_loader.py  pdf_data_loader.py
src/evaluation/: rag_evaluator.py  retrieval_evaluator.py
src/generation/: base_generation.py  openai_generation.py
src/pipelines/: hugging_face_retrieval_openai_generation_pipeline.py  openai_retrieval_openai_generation_pipeline.py  rag_pipeline.py
src/preprocessing/: text_splitter.py
src/retrieval/: base_search.py  vector_search.py
src/vector_models/: base_vector_model.py  hugging_face_vector_model.py  openai_embedding_model.py  openai_vector_model.py
tests/: rag_evaluation_data.json  retrieval_evaluation_data.json
